syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package Proto;
message Room
{
	required uint32 id = 1;
	repeated uint32 joined_id_client = 2;
	optional uint32 journal_entries_count = 3;
}

message RoomListResponse
{
	repeated Room rooms = 1;
}

message RoomCreateRequest
{
	required uint32 client_slots = 1;
	optional uint32 slot_to_join = 2;
}

message RoomJoin
{
	optional uint32 id = 1;
	optional uint32 slot_to_join = 2;
}