syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package Proto;
message ServerInfo
{
	required string name = 1;
	required bool password_protected = 2;
}
